render_readme.go: Render plain READMEs too

--- a/templates/repo_index.html.tmpl
+++ b/templates/repo_index.html.tmpl
@@ -62,7 +62,7 @@
 				<table class="wide">
 					<thead>
 						<tr class="title-row">
-							<th><label for="toggle-table-readme">README</label></th>
+							<th><label for="toggle-table-readme">{{ .readme_filename }}</label></th>
 						</tr>
 					</thead>
 					<tbody>
