--- a/templates/repo_tree_dir.html.tmpl
+++ b/templates/repo_tree_dir.html.tmpl
@@ -39,9 +39,7 @@
 				<table class="wide">
 					<thead>
 						<tr class="title-row">
-							<th>
-								README.md
-							</th>
+							<th>{{ .readme_filename }}</th>
 						</tr>
 					</thead>
 					<tbody>
