*: Migrate to the new path scheme

--- a/templates/_repo_header.html.tmpl
+++ b/templates/_repo_header.html.tmpl
@@ -1,11 +1,11 @@
 {{- define "repo_header" -}}
 <a href="/">Lindenii Forge</a>
 /
-g
+<a href="/{{ .group_name }}/">{{ .group_name }}</a>
 /
-<a href="/g/{{ .group_name }}/">{{ .group_name }}</a>
+<a href="/{{ .group_name }}/:">:</a>
 /
-<a href="/g/{{ .group_name }}/repos/">repos</a>
+<a href="/{{ .group_name }}/:/repos/">repos</a>
 /
-<a href="/g/{{ .group_name }}/repos/{{ .repo_name }}/">{{ .repo_name }}</a>
+<a href="/{{ .group_name }}/:/repos/{{ .repo_name }}/">{{ .repo_name }}</a>
 {{- end -}}
