--- a/templates/index.html.tmpl
+++ b/templates/index.html.tmpl
@@ -13,7 +13,7 @@
 			<ul>
 				{{- range .groups }}
 					<li>
-						<a href="g/{{ . }}/repos/">{{ . }}</a>
+						<a href="{{ . }}/:/repos/">{{ . }}</a>
 					</li>
 				{{- end }}
 			</ul>
