repo_tree_file: Fix link to CSS

--- a/templates/repo_tree_file.html.tmpl
+++ b/templates/repo_tree_file.html.tmpl
@@ -3,7 +3,7 @@
 <html lang="en">
 	<head>
 		{{ template "head_common" . }}
-		<link rel="stylesheet" href="/static/chroma.css" />
+		<link rel="stylesheet" href="/:/static/chroma.css" />
 		<title>{{ .group_name }}/repos/{{ .repo_name }}/{{ .path_spec }} &ndash; Lindenii Forge</title>
 	</head>
 	<body class="repo-tree-file">
