--- a/templates/_footer.html.tmpl
+++ b/templates/_footer.html.tmpl
@@ -1,3 +1,3 @@
 {{- define "footer" -}}
-<a href="https://lindenii.runxiyu.org/forge/">Lindenii Forge</a> (<a href="/:/source/">source</a>, <a href="https://forge.lindenii.runxiyu.org/g/lindenii/repos/forge/">upstream</a>)
+<a href="https://lindenii.runxiyu.org/forge/">Lindenii Forge</a> (<a href="/:/source/">source</a>, <a href="https://forge.lindenii.runxiyu.org/lindenii/:/repos/forge/">upstream</a>)
 {{- end -}}
