_header.html: Add header

--- a/templates/group_repos.html.tmpl
+++ b/templates/group_repos.html.tmpl
@@ -6,6 +6,9 @@
 		<title>Repos in {{ .group_name }} &ndash; Lindenii Forge</title>
 	</head>
 	<body class="group-repos">
+		<header>
+			{{ template "header" . }}
+		</header>
 		<div class="padding-wrapper">
 			<h1>
 			Repos in {{ .group_name }}
