--- a/templates/index.html.tmpl
+++ b/templates/index.html.tmpl
@@ -6,6 +6,9 @@
 		<title>Index &ndash; Lindenii Forge</title>
 	</head>
 	<body class="index">
+		<header>
+			{{ template "header" . }}
+		</header>
 		<div class="padding-wrapper">
 			<h1>Lindenii Forge</h1>
 			<h2>
