--- a/templates/repo_log.html.tmpl
+++ b/templates/repo_log.html.tmpl
@@ -7,6 +7,9 @@
 	</head>
 	<body class="repo-log">
 		<header>
+			{{ template "header" . }}
+		</header>
+		<header>
 			{{ template "repo_header" . }}
 		</header>
 		<table id="commits" class="wide">
