--- a/templates/repo_tree_file.html.tmpl
+++ b/templates/repo_tree_file.html.tmpl
@@ -8,6 +8,9 @@
 	</head>
 	<body class="repo-tree-file">
 		<header>
+			{{ template "header" . }}
+		</header>
+		<header>
 			{{ template "repo_header" . }}
 		</header>
 		<p>
