--- a/templates/repo_tree_dir.html.tmpl
+++ b/templates/repo_tree_dir.html.tmpl
@@ -7,6 +7,9 @@
 	</head>
 	<body class="repo-tree-dir">
 		<header>
+			{{ template "header" . }}
+		</header>
+		<header>
 			{{ template "repo_header" . }}
 		</header>
 		<div class="padding-wrapper scroll">
