login: Implement password validation

--- a/templates/login.html.tmpl
+++ b/templates/login.html.tmpl
@@ -6,6 +6,7 @@
 		<title>Login &ndash; Lindenii Forge</title>
 	</head>
 	<body class="index">
+		{{ .login_error }}
 		<div class="padding-wrapper">
 				<form method="POST" enctype="application/x-www-form-urlencoded">
 					<table>
