--- a/templates/_header.html.tmpl
+++ b/templates/_header.html.tmpl
@@ -1,12 +1,14 @@
 {{- define "header" -}}
-<div>
-	<a href="/">Lindenii Forge</a>
-</div>
-<div>
-	{{ if ne .user_id "" }}
-		<a href="/:/users/{{ .user_id }}">{{ .username }}</a>
-	{{ else }}
-		<a href="/:/login/">Login</a>
-	{{ end }}
-</div>
+<header id="main-header">
+	<div id="main-header-forge-title">
+		<a href="/">Lindenii Forge</a>
+	</div>
+	<div id="main-header-user">
+		{{ if ne .user_id "" }}
+			<a href="/:/users/{{ .user_id }}">{{ .username }}</a>
+		{{ else }}
+			<a href="/:/login/">Login</a>
+		{{ end }}
+	</div>
+</header>
 {{- end -}}
