--- a/templates/group_repos.html.tmpl
+++ b/templates/group_repos.html.tmpl
@@ -8,16 +8,23 @@
 	<body class="group-repos">
 		{{ template "header" . }}
 		<div class="padding-wrapper">
-			<h1>
-			Repos in {{ .group_name }}
-			</h1>
-			<ul>
+			<table class="wide">
+			<thead>
+				<tr>
+					<th colspan="2" class="title-row">Repos in {{ .group_name }}</th>
+				</tr>
+			</thead>
+			<tbody>
 				{{- range .repos }}
-					<li>
-						<a href="{{ . }}/">{{ . }}</a>
-					</li>
+					<td>
+						<a href="{{ .Name }}/">{{ .Name }}</a>
+					</td>
+					<td>
+						{{ .Description }}
+					</td>
 				{{- end }}
-			</ul>
+			</tbody>
+			</table>
 		</div>
 		<footer>
 			{{ template "footer" . }}
