--- a/static/style.css
+++ b/static/style.css
@@ -83,7 +83,7 @@ th, thead, tfoot {
 th[scope=row] {
 	text-align: left;
 }
-tr.title-row > th {
+tr.title-row > th, th.title-row, .title-row {
 	background-color: var(--darker-box-background-color);
 }
 td > pre {
