--- a/templates/repo_tree_dir.html.tmpl
+++ b/templates/repo_tree_dir.html.tmpl
@@ -12,7 +12,7 @@
 				<thead>
 					<tr class="title-row">
 						<th colspan="3">
-							/{{ .path_spec }}{{ if ne .path_spec "" }}/{{ end }} on {{ .ref }}
+							/{{ .path_spec }}{{ if ne .path_spec "" }}/{{ end }}{{ if .ref }} on {{ .ref }}{{ end }}
 						</th>
 					</tr>
 				</thead>
