--- a/templates/repo_log.html.tmpl
+++ b/templates/repo_log.html.tmpl
@@ -11,7 +11,7 @@
 			<table id="commits" class="wide">
 				<thead>
 					<tr class="title-row">
-						<th colspan="4">Commits on {{ .ref_name }}</th>
+						<th colspan="4">Commits {{ if .ref_name }} on {{ .ref_name }}{{ end }}</th>
 					</tr>
 					<tr>
 						<th scope="col">ID</th>
