--- a/templates/_header.html.tmpl
+++ b/templates/_header.html.tmpl
@@ -1,7 +1,7 @@
 {{- define "header" -}}
 <header id="main-header">
 	<div id="main-header-forge-title">
-		<a href="/">Lindenii Forge</a>
+		<a href="/">{{ .global.forge_title }}</a>
 	</div>
 	<div id="main-header-user">
 		{{ if ne .user_id "" }}
