--- a/templates/index.html.tmpl
+++ b/templates/index.html.tmpl
@@ -3,7 +3,7 @@
 <html lang="en">
 	<head>
 		{{ template "head_common" . }}
-		<title>Index &ndash; Lindenii Forge</title>
+		<title>Index &ndash; {{ .global.forge_title }}</title>
 	</head>
 	<body class="index">
 		{{ template "header" . }}
@@ -41,11 +41,11 @@
 				</thead>
 				<tbody>
 					<tr>
-						<th scope="row">SSH Public Key</th>
+						<th scope="row">SSH public key</th>
 						<td><code>{{ .global.server_public_key_string }}</code></td>
 					</tr>
 					<tr>
-						<th scope="row">SSH Fingerprint</th>
+						<th scope="row">SSH fingerprint</th>
 						<td><code>{{ .global.server_public_key_fingerprint }}</code></td>
 					</tr>
 				</tbody>
