--- a/templates/repo_index.html.tmpl
+++ b/templates/repo_index.html.tmpl
@@ -3,7 +3,7 @@
 <html lang="en">
 	<head>
 		{{ template "head_common" . }}
-		<title>{{ .group_name }}/repos/{{ .repo_name }} &ndash; Lindenii Forge</title>
+		<title>{{ .group_name }}/repos/{{ .repo_name }} &ndash; {{ .global.forge_title }}</title>
 	</head>
 	<body class="repo-index">
 		{{ template "header" . }}
@@ -11,7 +11,7 @@
 			<table id="repo-info-table">
 				<thead>
 					<tr class="title-row">
-						<th colspan="2">Repo Info</th>
+						<th colspan="2">Repo info</th>
 					</tr>
 				</thead>
 				<tbody>
@@ -37,7 +37,7 @@
 			<table id="recent-commits" class="wide">
 				<thead>
 					<tr class="title-row">
-						<th colspan="3"><label for="toggle-table-recent-commits">Recent Commits (<a href="log/{{ if .ref_type }}?{{ .ref_type }}={{ .ref_name }}{{ end }}">see all</a>)</label></th>
+						<th colspan="3"><label for="toggle-table-recent-commits">Recent commits (<a href="log/{{ if .ref_type }}?{{ .ref_type }}={{ .ref_name }}{{ end }}">see all</a>)</label></th>
 					</tr>
 				</thead>
 				<tbody>
