--- a/templates/repo_log.html.tmpl
+++ b/templates/repo_log.html.tmpl
@@ -3,7 +3,7 @@
 <html lang="en">
 	<head>
 		{{ template "head_common" . }}
-		<title>Log of {{ .group_name }}/repos/{{ .repo_name }} &ndash; Lindenii Forge</title>
+		<title>Log of {{ .group_name }}/repos/{{ .repo_name }} &ndash; {{ .global.forge_title }}</title>
 	</head>
 	<body class="repo-log">
 		{{ template "header" . }}
