--- a/templates/repo_commit.html.tmpl
+++ b/templates/repo_commit.html.tmpl
@@ -53,7 +53,7 @@
 				<div class="file-patch toggle-on-wrapper">
 					<input type="checkbox" id="toggle-{{ .From.Hash }}{{ .To.Hash }}" class="file-toggle toggle-on-toggle">
 					<label for="toggle-{{ .From.Hash }}{{ .To.Hash }}" class="file-header toggle-on-header">
-						<span>
+						<div>
 							{{ if eq .From.Path "" }}
 								--- /dev/null
 							{{ else }}
@@ -65,7 +65,7 @@
 							{{ else }}
 								+++ b/<a href="../tree/{{ .To.Path }}?commit={{ $commit_object.Hash }}">{{ .To.Path }}</a> {{ .To.Mode }}
 							{{ end }}
-						</span>
+						</div>
 					</label>
 					<div class="file-content toggle-on-content scroll">
 						{{ range .Chunks }}
