repo_index: Make readme scrollable just in case

--- a/templates/repo_index.html.tmpl
+++ b/templates/repo_index.html.tmpl
@@ -80,7 +80,7 @@
 			<div class="toggle-off-wrapper">
 				<input type="checkbox" id="toggle-readme" class="toggle-off-toggle" />
 				<label for="toggle-readme" class="toggle-off-header centering"><div>{{ .readme_filename }}</div></label>
-				<div class="toggle-off-content pad" id="readme">
+				<div class="toggle-off-content pad scroll" id="readme">
 					{{ .readme }}
 				</div>
 			</div>
