style.css: break-word for #readme
Some browsers (chromium and webkit ones, it seems) don't break lines
when they encounter a long token without spaces, such as long URLs. This
causes the hbox to be overfull and it'll start scrolling which is
annoying.

--- a/static/style.css
+++ b/static/style.css
@@ -102,6 +102,11 @@ a:link, a:visited {
 	padding: 2px;
 }
 
+/* Readme word breaks to avoid overfull hboxes */
+#readme {
+	word-break: break-word;
+}
+
 /* Table styles */
 table {
 	border: var(--lighter-border-color) solid 1px;
