--- a/templates/repo_index.tmpl
+++ b/templates/repo_index.tmpl
@@ -20,8 +20,11 @@
 						<td>{{ .repo_name }}</td>
 					</tr>
 					<tr>
-						<th scope="row">Clone</th>
-						<td><code>git clone {{ .clone_url }}</code></td>
+						<th scope="row" rowspan="2">Clone</th>
+						<td><code>git clone {{ .ssh_clone_url }}</code></td>
+					</tr>
+					<tr>
+						<td><code>git clone {{ .http_clone_url }}</code></td>
 					</tr>
 					{{ if .repo_description }}
 						<tr>
