--- a/static/style.css
+++ b/static/style.css
@@ -43,25 +43,30 @@ html, code, pre {
 
 /* Toggle table controls */
 .toggle-table-off, .toggle-table-on {
-       display: none;
+	opacity: 0;
+	position: absolute;
+}
+.toggle-table-off:focus + table > thead > tr > th > label,
+.toggle-table-on:focus + table > thead > tr > th > label {
+	outline: 1.5px var(--primary-color) solid;
 }
 .toggle-table-off + table > thead > tr > th, .toggle-table-on + table > thead > tr > th {
-       padding: 0;
+	padding: 0;
 }
 .toggle-table-off + table > thead > tr > th > label, .toggle-table-on + table > thead > tr > th > label {
-       width: 100%;
-       display: inline-block;
-       padding: 3px 0;
-       cursor: pointer;
+	width: 100%;
+	display: inline-block;
+	padding: 3px 0;
+	cursor: pointer;
 }
 .toggle-table-off:checked + table > tbody {
-       display: none;
+	display: none;
 }
 .toggle-table-on + table > tbody {
-       display: none;
+	display: none;
 }
 .toggle-table-on:checked + table > tbody {
-       display: table-row-group;
+	display: table-row-group;
 }
 
 /* Footer styles */
@@ -181,7 +186,8 @@ pre.chunk {
 	border: var(--lighter-border-color) solid 1px;
 }
 .toggle-off-toggle, .toggle-on-toggle {
-	display: none;
+	opacity: 0;
+	position: absolute;
 }
 .toggle-off-header, .toggle-on-header {
 	font-weight: bold;
@@ -196,6 +202,9 @@ pre.chunk {
 }
 .toggle-on-content {
 	display: none;
+}
+.toggle-on-toggle:focus + .toggle-on-header, .toggle-off-toggle:focus + .toggle-off-header {
+	outline: 1.5px var(--primary-color) solid;
 }
 .toggle-on-toggle:checked + .toggle-on-header + .toggle-on-content {
 	display: block;
