--- a/static/style.css
+++ b/static/style.css
@@ -145,13 +145,11 @@ td > pre {
 .chunk-unchanged {
 	color: grey;
 }
-.chunk-addition {
+.chunk-addition, @media (prefers-color-scheme: dark) .chunk-addition {
 	background-color: green;
 }
-@media (prefers-color-scheme: dark) {
-	.chunk-addition {
-		background-color: lime;
-	}
+.chunk-addition@media (prefers-color-scheme: dark) {
+	background-color: lime;
 }
 .chunk-deletion {
 	background-color: red;
