*.tmpl: Update <title>'s

--- a/templates/group_repos.tmpl
+++ b/templates/group_repos.tmpl
@@ -3,7 +3,7 @@
 <html lang="en">
 	<head>
 		{{ template "head_common" . }}
-		<title>Repos in {{ .group_name }} &ndash; {{ .global.forge_title }}</title>
+		<title>Repos &ndash; {{ .group_name }} &ndash; {{ .global.forge_title }}</title>
 	</head>
 	<body class="group-repos">
 		{{ template "header" . }}
