--- a/templates/repo_tree_file.tmpl
+++ b/templates/repo_tree_file.tmpl
@@ -4,7 +4,7 @@
 	<head>
 		{{ template "head_common" . }}
 		<link rel="stylesheet" href="/:/static/chroma.css" />
-		<title>{{ .group_name }}/repos/{{ .repo_name }}/{{ .path_spec }} &ndash; {{ .global.forge_title }}</title>
+		<title>/{{ .path_spec }} &ndash; {{ .repo_name }} &ndash; {{ .group_name }} &ndash; {{ .global.forge_title }}</title>
 	</head>
 	<body class="repo-tree-file">
 		{{ template "header" . }}
