repo/index: Add button to show merge requests

--- a/templates/repo_index.tmpl
+++ b/templates/repo_index.tmpl
@@ -32,6 +32,11 @@
 				</tbody>
 			</table>
 		</div>
+		<div class="padding-wrapper">
+			<p>
+				<a href="contrib/" class="btn-normal">Merge requests</a>
+			</p>
+		</div>
 		<div class="padding-wrapper scroll">
 			<input id="toggle-table-recent-commits" type="checkbox" class="toggle-table-off" />
 			<table id="recent-commits" class="wide">
